# irdetect

./: CMakeLists.txt  README.md  main.cpp
pio/: squarewave.pio
